# Topdown

./: CMakeLists.txt
include/: configException.hpp  game.hpp  resource.hpp
include/entity/: enemy.hpp  entity.hpp  player.hpp  projectile.hpp
include/menu/: elements.hpp
resources/entities/: player.cfg  template.cfg
resources/entities/enemies/: Diver.cfg  Goon.cfg
resources/images/: cloud_source.xcf
resources/levels/: one.cfg  template.cfg
src/: game.cpp  main.cpp  resource.cpp
src/entity/: enemy.cpp  player.cpp  projectile.cpp
